--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,10 @@
 baseURL = "https://renebidart.com/"
 languageCode = "en-us"
 title = "Rene Bidart"
-# theme = "minimal"
 
 [params]
-  description = "PhD Candidate in Systems Design Engineering at the University of Waterloo"
-
-[menu]
-  [[menu.main]]
-    name = "Home"
-    url = "/"
-    weight = 1
-  [[menu.main]]
-    name = "Blog"
-    url = "/post/"
-    weight = 2
+  description = "PhD student at University of Waterloo, focused on using AI to improve healthcare"
+  custom_css = ["/css/style.css"]
 
 [markup]
   [markup.goldmark]
